# letta-lite

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  gradle.properties  settings.gradle
.cargo/: config.toml
.github/workflows/: android-64bit-full-build-release-optimized.yml  android-release.yml  build-android.yml  guan64.yml  letta-lite-android-build.yml  letta-lite-termux-build.yml  后改的官方的自定义  后改的官方的自定义.yml  把两个部分错误合并成一个正确的屎  把两个部分错误合并成一个正确的屎.yml  自动apk.yml
anzhuoshifangyingwenjian/: AndroidManifest.xml  MainActivity.java  activity_main.xml  letta_lite_main.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/letta/lite/mobile/: MainActivity.java
bindings/android/: build.gradle
bindings/android/src/main/java/ai/letta/lite/: LettaLite.kt
bindings/android/src/main/jni/: letta_jni.c
bindings/rn/: package.json
bindings/rn/src/: index.ts
bindings/swift/: Package.swift
bindings/swift/Sources/LettaLite/: LettaLite.swift
cargo/: config.toml
core/: Cargo.toml
core/.cargo/: config.toml
core/src/: af.rs  agent.rs  context.rs  error.rs  lib.rs  memory.rs  message.rs  provider.rs  tool.rs
examples/node-cli/: package.json
examples/node-cli/src/: index.ts  letta.ts
ffi/: Cargo.toml  build.rs
ffi/src/: lib.rs
providers/llama/: Cargo.toml
providers/llama/src/: lib.rs
providers/toy/: Cargo.toml
providers/toy/src/: lib.rs
scripts/: build-all.sh  build-android-64bit-minimal.sh  build-android-64bit.sh  build-android.sh  build-ios.sh  test-integration.sh
storage/: Cargo.toml
storage/migrations/: 001_initial.sql
storage/src/: db.rs  error.rs  lib.rs  migrations.rs  models.rs
sync/: Cargo.toml
sync/src/: lib.rs
tests/: integration_test.rs
