[workspace]
members = [
    "core",
    "ffi",
    "storage",
    "providers/toy",
    "providers/llama",
    "sync",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Letta Team"]
license = "MIT"
repository = "https://github.com/letta-ai/letta-lite"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"

# Profile for mobile builds
[profile.mobile]
inherits = "release"
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler