[package]
name = "letta-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
letta-core = { path = "../core" }
letta-storage = { path = "../storage" }
letta-sync = { path = "../sync" }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
lazy_static = "1.5"
libc = "0.2"

[build-dependencies]
cbindgen = "0.26"
