[package]
name = "letta-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true

# SQLite
rusqlite = { version = "0.31", features = ["bundled", "backup", "chrono", "serde_json", "uuid"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"